@@ -124,6 +124,9 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
 
+    TAJO-873: Query status is still RUNNING after session expired.
+    (Hyoungjun Kim, jinho)
+
     TAJO-1004: UniformRangePartition cannot deal with unicode ranges.
     (hyunsik)
 
